--- a/04_Communicating_with_the_Server/index.html
+++ b/04_Communicating_with_the_Server/index.html
@@ -6,7 +6,7 @@
    
 
     <link rel="stylesheet" href="style.css">
-    <script src="src/data.js"></script>
+    <!-- <script src="src/data.js"></script> -->
     <script defer src="src/index.js"></script>
     
 
