--- a/06_PATCH_and_DELETE_Requests/index.html
+++ b/06_PATCH_and_DELETE_Requests/index.html
@@ -35,7 +35,7 @@
             <input type="text" id="form-author" name="author">
           
             <label for="price">Price:</label>
-            <input type="number" id="form-price" name="price">
+            <input type="number" step="0.01" id="form-price" name="price">
           
             <label for="imageUrl">Image url:</label>
             <input type="text" id="form-imageUrl" name="imageUrl">
