--- a/07_Communicating_with_External_APIS/index.html
+++ b/07_Communicating_with_External_APIS/index.html
@@ -7,8 +7,9 @@
 
     <link rel="stylesheet" href="style.css">
     <script src="src/request_helpers.js"></script>
-    <script defer src="src/keys.js"></script>
+    <!-- <script defer src="src/keys.js"></script> -->
     <script defer src="src/index.js"></script>
+    <script defer src="src/helper_functions.js"></script>
     
 
     <title>JS - Communicating with External APIs</title>
